# with-opencv-action

./: .eslintrc.json  LICENSE  README.md  action.yml  package-lock.json  package.json
.github/workflows/: test.yml
__tests__/: main.test.ts
src/: main.ts
tests/basic_test/: CMakeLists.txt  main.cpp
